--- a/index.html
+++ b/index.html
@@ -341,7 +341,8 @@
 <script>
   document.querySelectorAll('.card').forEach(card => {
     card.addEventListener('click', () => {
-      card.querySelector('.card-inner').classList.toggle('flipped');
+      const inner = card.querySelector('.card-inner');
+      inner.classList.toggle('flipped');
     });
   });
 </script>
